# fklc

./: Dockerfile  README.MD  docker-compose.yml  pyproject.toml
app/: test.py
app/core/: config.py
app/modules/: chain.py  openai_client.py  prompt_template.py  sql_memory.py
app/prompts/: prompts.py
test/: test.ipynb
